--- a/bryft/src/pages/AboutPage/AboutPage.css
+++ b/bryft/src/pages/AboutPage/AboutPage.css
@@ -1,1 +1,52 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
+
+.row {
+    width:100%;
+    height:50%;
+}
+.row div {
+    width:50%;
+    height:100%;
+    float:left;
+}
+
+.title {
+    font-family: 'Amiko', sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 15px;
+    text-align: center;
+    color: #438EFF;
+}
+
+.subtitle {
+    font-family: 'Amiko', sans-serif;
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 20px;
+    text-align: center;
+    color: #438EFF;
+}
+
+.text {
+    font-family: 'Amiko', sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+.brick {
+    margin: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    align-items: center;
+}
+
+.bg {
+    height: 100vh;
+    background: linear-gradient(to left,
+    white 0%,
+    white 50%,
+    #438EFF 50%,
+    #438EFF 100%
+    );
+}
