--- a/bryft/src/components/Navbar/Navbar.css
+++ b/bryft/src/components/Navbar/Navbar.css
@@ -51,3 +51,34 @@
     text-decoration: underline;
 }
 
+.popupLogo {
+    color: #111111;
+    font-size: 2.5rem;
+    text-decoration: none;
+    font-family: 'Amiko', sans-serif;
+    margin-bottom: '2%';
+    letter-spacing: 3px;
+    text-align: center;
+}
+
+.welcomeMessage {
+    color: #111111;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-family: 'Amiko', sans-serif;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 2.5%;
+}
+
+.descriptionMessage {
+    color: rgb(106, 100, 100);
+    font-family: 'Amiko', sans-serif;
+    text-align: center;
+    font-size: 0.95rem;
+    margin-top: 1%;
+}
+
+.signInButton {
+      
+}
