--- a/bryft/src/pages/HomePage/HomePage.css
+++ b/bryft/src/pages/HomePage/HomePage.css
@@ -14,31 +14,31 @@ h1 {
 
 h2 {
     position: absolute;
-        width: 380px;
-        height: 37px;
-        top: 135%;
-    
-        font-family: 'Verdana', sans-serif;
-        font-style: normal;
-        font-weight: 700;
-        font-size: 28px;
-        line-height: 38px;
-        text-align: center;
-    
-        color: #565656;
+    top: 45%;
+    height: auto;
+    width: 80%;
+
+    font-family: 'Verdana', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 35px;
+    text-align: center;
+
+    color: #565656;
 }
 
 p {
     position: absolute;
-    width: 360px;
-    height: 37px;
+    top: 60%;
+    width: 85%;
+    height: auto;
 
     font-family: 'Verdana', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 27px;
-    top: 144%;
     color: #565656;
 }
 
@@ -47,98 +47,96 @@ a {
     text-decoration: none;
 }
 
-.sh1 {
-    left: 3%;
+.infobox {
+    position: relative;
+    width: 23.4%;
+    min-height: 350px;
+    margin: 1%;
+    left: .5%;
+    background-color: white;
+    float: left;
+    padding: 3%;
 }
 
-.sh2 {
-    left: 37%;
-}
-
-.sh3 {
-    left: 68%;
+.infocontainer {
+    width: 100%;
+    top: 100%;
+    position: absolute;
 }
 
 .backdrop {
     z-index: -2;
-    position: fixed;
+    position: absolute;
     top: 0;
+    width: 100%;
     height: 100%;
-    left: -3%;
+}
+
+.quickcontainer {
+    justify-content: center;
+    position: absolute;
+        top: 65%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    width: 600px;
+    height: 60px;
+    display: flex;
+    margin: auto;
+    flex-wrap: wrap;
 }
 
 .textbox {
     box-sizing: border-box;
     border: 4px solid #565656;
-    position: absolute;
-    width: 16.5%;
-    height: 8%;
+    position: relative;
+    width: 240px;
+    height: 60px;
     z-index: 1;
-    top: 65%;
     text-align: center;
 
     font-size: 24px;
     font-family: Verdana, sans-serif;
     color: white;
+    
     font-weight: bold;
     line-height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 10px;
-    text-align: center;
+    margin: 0px 15px;
+    padding: 8px 10px;
+    text-align: space-between;
+}
+
+.color1{
+    background: rgba(52, 158, 255, 0.60);
+}
+
+.color2 {
+    background: rgba(231, 234, 49, 0.60);
 }
 
 .textbox:hover {
     border: 4px solid #ffffff;
 }
 
-.t1 {
-    background: rgba(52, 158, 255, 0.65);
-    left: 31.5%;
-}
-
-.t2 {
-    background: rgba(231, 234, 49, 0.65);
-    left: 52.5%;
-}
-
 .divider {
     background: rgba(52, 158, 255, 0.65);
-    position: absolute;
-    width: 10px;
+    position: static;
+    width: 1%;
     height: 420px;
     background: #D9D9D9;
     border-radius: 48px;
-    top: 110%;
+    float: left;
+    margin-top: 3%;
+    margin-left: 1%;
+    margin-bottom: 3%;
 }
 
 .icon {
-    width: 17%;
-    top: 108%;
-    position: absolute;
-}
-
-.i1 {
-    left: 9%;
-    margin-top: 60px;
-}
-
-.i2 {
-    left: 41%;
-    margin-top: 60px;
-}
-
-.i3 {
-    left: 73%;
-    margin-top: 70px;
-}
-
-.d1 {
-    left: 33%;
-}
-
-.d2 {
-    left: 66%;
+    width: 250px;
+    max-width: 100%;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .backing {
