--- a/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
+++ b/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
@@ -23,13 +23,16 @@
 }
 
 .infoContainer {
-    height: 40vh;
+    height: 60%;
     width: 100vh;
     margin: auto;
     margin-top: 5vh;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+    padding-top: 1.5vh;
+    /* padding-bottom: 1vh; */
+    /* margin-bottom: 0vh; */
 }
 
 .bryftLogo {
@@ -115,6 +118,161 @@
 }
 
 .firstNameContainer {
+    width: 45vh;
+    height: 4vh;
+    margin-top: 1%;
+    font-family: 'Amiko', sans-serif;
+    font-size: 1.0rem;
+}
+
+.basicInfoContainer {
+    font-family: 'Amiko', sans-serif;
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-left: 2%;
+    margin-bottom: 1%;
+}
+
+.dividingLine {
+    height: 0.1vh;
+    width: 100%;
+    background-color: lightgray;
+}
+
+.names {
+    margin-top: 3.5vh;
+    width: 45.5vh;
+}
+
+.inputLabel {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.95rem;
+    font-weight: bold;
+}
+
+.inputLabelBio {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.95rem;
+    font-weight: bold;
+    margin-top: 3vh;
+}
+
+.bioContainer {
+    max-width: 95.1vh;
+    max-height: 8vh;
+    margin-top: 1vh;
+    margin-bottom: 3.1vh;
+    min-width: 95.1vh;
+    min-height: 8vh;
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.9rem;
+}
+
+.nextButton {
+    width: 100%;
+    height: 90%;
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    border: None;
+    border-radius: 4px;
+    margin-left: 5%;
+    cursor: pointer;
+}
+
+.bottomContainer {
+    width: 21%;
+    height: 90%;
+}
+
+.schoolText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.95rem;
+    font-weight: bold;
+    margin-top: 3.5%;
+    margin-left: 2%;
+}
+
+.schoolContainer {
     width: 95vh;
     height: 4vh;
+    margin-top: 1%;
+    font-family: 'Amiko', sans-serif;
+    font-size: 1.0rem;
+}
+
+.carContainer {
+    max-width: 95.1vh;
+    max-height: 8vh;
+    margin-top: 1vh;
+    margin-bottom: 3.1vh;
+    min-width: 95.1vh;
+    min-height: 8vh;
+    font-family: 'Amiko', sans-serif;
+    font-size: 1.0rem;
+}
+
+.bottomContainerSC {
+    width: 100%;
+    height: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 3%;
+    margin-left: 2%;
+    /* border: solid; */
+}
+
+.prevButton {
+    width: 20%;
+    height: 90%;
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: None;
+    border-radius: 4px;
+    cursor: pointer; 
+    /* border: solid; */
+}
+
+.nextToStep3Button {
+    width: 23%;
+    height: 90%;
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8rem;
+    font-weight: bold;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: None;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: -1%;
+}
+
+.imageContainer {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 3%;
+}
+  
+.imageItem {
+    border: 2px solid transparent;
+    cursor: pointer;
+    height: 20vh; /* Adjust the height as desired */
+    width: 20vh; /* Adjust the width as desired */
+}
+
+.selectedImage {
+border-color: blue;
 }
