--- a/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
+++ b/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
@@ -4,6 +4,7 @@
     margin-bottom: 10px;
     width: 29.4vh;
     border-radius: 4px;
+    transition: width 0.5s ease-in-out;
   }
   
 .progress-line.active1 {
@@ -96,6 +97,18 @@
     color: #439EFF;
 }
 
+.step1.active5 {
+    color: #111111;
+}
+
+.step2.active5 {
+    color: #111111;
+}
+
+.step3.active5 {
+    color: #111111;
+}
+
 .step2.active4 {
     color: #FFD600;
 }
@@ -123,6 +136,10 @@
     margin-top: 1%;
     font-family: 'Amiko', sans-serif;
     font-size: 1.0rem;
+    border-radius: 6px;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
 }
 
 .basicInfoContainer {
@@ -166,6 +183,10 @@
     min-height: 8vh;
     font-family: 'Amiko', sans-serif;
     font-size: 0.9rem;
+    border-radius: 6px;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
 }
 
 .nextButton {
@@ -203,6 +224,10 @@
     margin-top: 1%;
     font-family: 'Amiko', sans-serif;
     font-size: 1.0rem;
+    border-radius: 6px;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
 }
 
 .carContainer {
@@ -214,6 +239,10 @@
     min-height: 8vh;
     font-family: 'Amiko', sans-serif;
     font-size: 1.0rem;
+    border-radius: 6px;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
 }
 
 .bottomContainerSC {
@@ -274,5 +303,5 @@
 }
 
 .selectedImage {
-border-color: blue;
+    border-color: #439EFF;
 }
