Changing HomePage.css global styling to have class names so it doesnt affect other pages

--- a/bryft/src/pages/HomePage/HomePage.css
+++ b/bryft/src/pages/HomePage/HomePage.css
@@ -1,4 +1,4 @@
-h1 {
+.h1-headings {
     font-size: 72px;
         font-family: Verdana, sans-serif;
         color: white;
@@ -12,7 +12,7 @@ h1 {
     text-align: center;
 }
 
-h2 {
+.h2-headings {
     position: absolute;
     top: 45%;
     height: auto;
@@ -28,7 +28,7 @@ h2 {
     color: #565656;
 }
 
-p {
+.p-tags {
     position: absolute;
     top: 60%;
     width: 85%;
