--- a/bryft/src/pages/UserInfoPage/UserInfoPage.css
+++ b/bryft/src/pages/UserInfoPage/UserInfoPage.css
@@ -16,6 +16,8 @@
     margin: 0 auto;
     text-align: center;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .mainform label {
@@ -23,17 +25,15 @@
     display: block;
     color: #438EFF;
     font-weight: bold;
+    margin-bottom: 8px;
 }
 
-input, textarea {
+input,
+textarea {
     width: 100%;
-    padding: 6px 10px;
+    padding: 8px;
     margin: 10px 0;
     border: 1px solid #D9D9D9;
-    box-sizing: border-box;
-    display:block;
-    resize: none;
-    height: auto;
     border-radius: 8px;
     background-color: #D9D9D9;
     font-family: 'Amiko', sans-serif;
@@ -58,18 +58,8 @@ button:hover {
     background-color: #176ff2;
 }
 
-.submit {
-    width: 100%;
-    font-size: 20px;
-    padding: 6px 10px !important;
-    margin: 10px 0 !important;
-    margin-top: 30px !important;
-}
 .file-input {
     display: none;
-    opacity: 0;
-    position: absolute;
-    z-index: -1;
 }
 
 .file-input-label {
@@ -83,9 +73,78 @@ button:hover {
     border-radius: 8px;
     padding: 6px 10px;
     margin: 10px 0;
-    width: 300px;
+    width: 100%;
 }
 
 .file-input-label:hover {
-    background-color: #a0a0a0;
+    background-color: lightgrey;
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black overlay */
+    z-index: 9999; /* Adjust the z-index as needed */
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    width: auto;
+    height: auto;
+    max-width: 90%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex; /* Add this line */
+    flex-direction: column; 
+    border-radius: 10px;
+}
+
+.title {
+    display: flex;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.cancel,
+.submit {
+    margin: 20px;
+    padding: 10px 16px;
+    border: none;
+    border-radius: 8px;
+    color: #fff;
+    background-color: #007bff;
+    cursor: pointer;
+    margin-top: 15px !important;
+}
+
+.cancel:hover,
+.submit:hover {
+    background-color: #0056b3;
+}
+
+.button-row {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+.button-row button {
+    flex: 1;
+    margin: 0 10px;
+}
+
+.modal-content {
+    flex:1;
+    border-top: 1px solid #ccc;
+    padding-top: 10px;
+    max-height: 400px; /* Set the maximum height for the content */
+    overflow-y: auto; /* Enable vertical scrolling */
+    display: inline;
+  }
