- linked driver profile to name on ride post - store uid in ride doc

--- a/bryft/src/components/RidePost/RidePost.css
+++ b/bryft/src/components/RidePost/RidePost.css
@@ -63,3 +63,12 @@
     font-size: 15px;
     padding: 10px;
 }
+
+.driver-link {
+    color:black;
+}
+
+.driver-link:hover {
+    color:blue;
+    text-decoration: underline;
+}
