--- a/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
+++ b/bryft/src/pages/SignUpInfoPage/newUserSignUp.css
@@ -44,7 +44,7 @@
     margin-bottom: '2%';
     letter-spacing: 3px;
     text-align: center;
-    margin-top: 5vh;
+    margin-top: 0vh;
 }
 
 .description {
@@ -131,7 +131,7 @@
 }
 
 .firstNameContainer {
-    width: 45vh;
+    width: 43vh;
     height: 4vh;
     margin-top: 1%;
     font-family: 'Amiko', sans-serif;
@@ -140,6 +140,7 @@
     border-width: 1px;
     border: solid;
     border-color: rgba(207, 205, 205, 0.959);
+    background-color: white;
 }
 
 .basicInfoContainer {
@@ -175,11 +176,11 @@
 }
 
 .bioContainer {
-    max-width: 95.1vh;
+    max-width: 93vh;
     max-height: 8vh;
     margin-top: 1vh;
     margin-bottom: 3.1vh;
-    min-width: 95.1vh;
+    min-width: 93vh;
     min-height: 8vh;
     font-family: 'Amiko', sans-serif;
     font-size: 0.9rem;
@@ -187,6 +188,7 @@
     border-width: 1px;
     border: solid;
     border-color: rgba(207, 205, 205, 0.959);
+    background-color: white;
 }
 
 .nextButton {
@@ -219,7 +221,7 @@
 }
 
 .schoolContainer {
-    width: 95vh;
+    width: 93vh;
     height: 4vh;
     margin-top: 1%;
     font-family: 'Amiko', sans-serif;
@@ -228,14 +230,15 @@
     border-width: 1px;
     border: solid;
     border-color: rgba(207, 205, 205, 0.959);
+    background-color: white;
 }
 
 .carContainer {
-    max-width: 95.1vh;
+    max-width: 93vh;
     max-height: 8vh;
     margin-top: 1vh;
     margin-bottom: 3.1vh;
-    min-width: 95.1vh;
+    min-width: 93vh;
     min-height: 8vh;
     font-family: 'Amiko', sans-serif;
     font-size: 1.0rem;
@@ -243,6 +246,7 @@
     border-width: 1px;
     border: solid;
     border-color: rgba(207, 205, 205, 0.959);
+    background-color: white;
 }
 
 .bottomContainerSC {
@@ -269,6 +273,7 @@
     border: None;
     border-radius: 4px;
     cursor: pointer; 
+    margin-left: 0%;
     /* border: solid; */
 }
 
