--- a/bryft/src/pages/DriverProfilePage/DriverProfile.css
+++ b/bryft/src/pages/DriverProfilePage/DriverProfile.css
@@ -129,3 +129,9 @@
     text-decoration: underline;
     cursor: pointer;
 }
+
+.no-reviews-msg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    width: 96%
+}
