--- a/bryft/src/components/RideModal/RideModal.css
+++ b/bryft/src/components/RideModal/RideModal.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
+
 .error-message {
     color: red;
+}
+
+.ride-button {
+
 }
