--- a/bryft/src/components/RidePost/RidePost.css
+++ b/bryft/src/components/RidePost/RidePost.css
@@ -5,6 +5,14 @@
     width: auto;
     height: 100px;
     margin-bottom: 10px;
+    border: 1px solid black;
+    border-radius: 12px !important;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.ride-card:hover {
+    transform: scale(1.02);
 }
 
 .ride-card-content {
