--- a/bryft/src/pages/RidesPage/RidesPage.css
+++ b/bryft/src/pages/RidesPage/RidesPage.css
@@ -3,9 +3,10 @@
 .title-text {
     font-family: 'amiko';
     color: #439EFF;
+    font-weight: bold;
 }
 
-.ride-button {
+/* .ride-button {
     background-color: #439EFF;
     color: #FFFFFF;
     border-radius: 8px;
@@ -18,4 +19,4 @@
   
 .ride-button:hover {
     background-color: rgb(13, 99, 152);
-}
+} */
