--- a/bryft/src/components/Navbar/Navbar.css
+++ b/bryft/src/components/Navbar/Navbar.css
@@ -50,3 +50,266 @@
     color: #ffffff;
     text-decoration: underline;
 }
+
+.loginButton {
+    font-family: 'Amiko', sans-serif;
+    border-radius: 22px;
+    border-width: 0px;
+    background-color: #439EFF;
+    color: white;
+    font-weight: bold;
+    padding: 5px 24px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    margin: 0;
+}
+
+.logoutButton {
+    font-family: 'Amiko', sans-serif;
+    border-radius: 22px;
+    border-width: 1px;
+    border-color: #439EFF;
+    border: solid;
+    background-color: white;
+    color: #439EFF;
+    font-weight: bold;
+    padding: 5px 24px;
+    cursor: pointer;
+    font-size: 1.1rem;
+    margin: 0;
+}
+
+.loginButton:hover {
+    background-color: #388ae1;
+    transition:ease-out;
+}
+
+.logoutButton:hover {
+    background-color: #439EFF;
+    border-color: white;
+    color: white;
+}
+
+.popupLogo {
+    color: #111111;
+    font-size: 2.5rem;
+    text-decoration: none;
+    font-family: 'Amiko', sans-serif;
+    margin-bottom: '2%';
+    letter-spacing: 3px;
+    text-align: center;
+    margin-top: 7.5%;
+}
+.exButton {
+    position: absolute;
+    height: 4.5%;
+    width: 6%;
+    top: 3.7%;
+    left: 90%;
+}
+
+.welcomeMessage {
+    color: #111111;
+    font-size: 1.5rem;
+    text-decoration: none;
+    font-family: 'Amiko', sans-serif;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 3%;
+}
+
+.descriptionMessage {
+    color: rgb(106, 100, 100);
+    font-family: 'Amiko', sans-serif;
+    text-align: center;
+    font-size: 0.95rem;
+    margin-top: 1%;
+}
+
+.signInButtonContainer {
+    justify-content: center;
+    flex-direction: row;
+    display: flex;
+    /* border-style: solid; */
+}
+
+.googleContainer {
+    flex-direction: row;
+    display: flex;
+    border-radius: 8px;
+    border-width: 1.5px;
+    border-color: rgba(207, 205, 205, 0.959);
+    border-style: solid;
+    cursor: pointer;
+    justify-content: center;
+    padding-top: 0.2%;
+    padding-bottom: 0.2%;
+    width: 33%;
+    height: 2.2em;
+    margin-top: 4%;
+}
+
+.googleContainer:hover {
+	background: rgb(231, 231, 231);
+    transition:ease-out;
+}
+
+.googleLogo {
+    max-height: 65%;
+    max-width: 65%;
+    align-self: center;
+    /* border-style: solid; */
+}
+
+.googleText {
+    color: black;
+    font-size: 1.1rem;
+    font-family: 'Amiko', sans-serif;
+    font-weight: bolder;
+    align-self: center;
+    margin-left: 6.5%;
+    padding-top: 1%;
+}
+
+.divideContainer {
+    justify-content: center;
+    flex-direction: row;
+    display: flex;
+    height: 5px;
+    margin-top: 6%;
+}
+
+.emailText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-bottom: 1%;
+    margin-top: 8%;
+}
+
+.emailSignUpInput {
+    height: 5vh;
+    width: 100%;
+    border-radius: 6px;
+    align-items: center;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
+    padding-left: 2.5%;
+    color: black;
+    font-weight: 400;
+    font-size: 0.9em;
+}
+
+.passwordText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.9em;
+    font-weight: bold;
+    margin-bottom: 1%;
+    margin-top: 4%;
+}
+
+.passwordSignUpInput {
+    height: 5vh;
+    width: 100%;
+    border-radius: 6px;
+    align-items: center;
+    border-width: 1px;
+    border: solid;
+    border-color: rgba(207, 205, 205, 0.959);
+    padding-left: 2.5%;
+    color: black;
+    font-weight: 400;
+    font-size: 0.9em;
+}
+
+.checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 4px;
+    border: 1.6px solid rgba(207, 205, 205, 0.959);
+    outline: none;
+    transition: background-color 0.2s;
+    margin-left: -0.25%;
+    cursor: pointer;
+}
+
+.checkbox:checked {
+    background-color: #439EFF;
+    border: 1.6px solid #439EFF;
+}
+
+.checkbox::after {
+  content: '\2713';
+  position: relative;
+  top: -16%;
+  left: 7%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 15px;
+  visibility: hidden;
+}
+
+.checkbox:checked::after {
+    visibility: visible;
+  }
+
+.rememberText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    align-self: center;
+}
+
+.forgotPasswordText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-decoration: underline;
+    align-self: center;
+    cursor: pointer;
+}
+
+.signInButton {
+    width: 100%;
+    height: 5vh;
+    background-color: #439EFF;
+    color: white;
+    font-family: 'Amiko', sans-serif;
+    font-weight: bold;
+    font-size: 1em;
+    border: None;
+    border-radius: 6px;
+    cursor: pointer;
+    margin-top: 6%;
+}
+
+.signInButton:hover {
+    background-color: #388ae1;
+}
+
+.error {
+    color: rgb(201, 11, 11);
+    margin-top: 1.5%;
+    font-family: 'Amiko', sans-serif;
+    font-weight: 400;
+    font-size: 0.9em;
+}
+
+.noAccountText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    color: rgb(154, 154, 154);
+}
+
+.createAccountText {
+    font-family: 'Amiko', sans-serif;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
+}
