--- a/bryft/src/pages/DriverProfilePage/DriverProfile.css
+++ b/bryft/src/pages/DriverProfilePage/DriverProfile.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
+
+body {
+    font-family: 'Amiko', sans-serif;
+}
+
 .driver-profile-page {
     display: flex;
     /* flex-direction: column; */
@@ -13,11 +19,12 @@
 
 .driver-photo {
     position: relative;
-    padding-top: 5%;
-    padding-left: 5%;
+    margin-top: 5%;
+    margin-left: 5%;
     max-height: 400px;
-    height: 360px;
-    width: auto;
+    max-width: 300px;
+    height: auto;
+    border-radius: 10px;
 }
 
 .driver-name {
@@ -26,6 +33,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 2em;
+    width: 100%;
 }
 
 .driver-car {
@@ -42,16 +50,25 @@
     width: 360px;
 }
 
-.reviews {
+.driver-reviews-container {
     margin-left: 8%;
     margin-top: 15px;
     width: 90%;
+    
+    .reviews-heading-container {
+        width: 90%;
+        height: 20%;
+        background-color: #5ea8f8;
+        border-radius: 10px !important;
+        margin-bottom: 20px;    
 
-    .reviews-heading {
-        font-size: 2em;
-        color: #439EFF;
-        text-decoration: underline;
-        margin-bottom: 5px;
+        .reviews-heading {
+            font-size: 2em;
+            color: white;
+            /* text-decoration: underline; */
+            text-align: center;
+            padding-top: 0.8em;
+        }   
     }
 }
 
@@ -93,8 +110,8 @@
 
 .reviews-accordion {
     margin-bottom: 20px;
-    /* width: 100%; */
     max-width: 90%;
+    border-radius: 10px !important;
 }
 
 .review-expanded {
