--- a/bryft/src/pages/RiderProfile/RiderProfile.css
+++ b/bryft/src/pages/RiderProfile/RiderProfile.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
+
+body {
+    font-family: 'Amiko', sans-serif;
+}
+
 .rider-profile-page {
     display: flex;
-    /* flex-direction: column; */
     flex-basis: 100%;
     flex: 1;
 }
@@ -13,11 +18,14 @@
 
 .rider-photo {
     position: relative;
-    padding-top: 5%;
-    padding-left: 5%;
+    margin-top: 5%;
+    margin-left: 5%;
     max-height: 400px;
-    height: 360px;
-    width: auto;
+    /* height: 300px; */
+    /* width: auto; */
+    max-width: 350px;
+    height: auto;
+    border-radius: 10px;
 }
 
 .rider-name {
@@ -26,6 +34,7 @@
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 2em;
+    width: 100%;
 }
 
 .rider-car {
@@ -34,34 +43,40 @@
     margin-top: 5px;
     font-size: 1.3em;
     margin-bottom: -10px;
+    width: 100%;
 }
 
 .rider-bio {
     position: relative;
     padding-left: 5.5%;
-    width: 360px;
+    width: 340px;
 }
 
-.reviews {
+.rider-reviews-container {
     margin-left: 8%;
     margin-top: 15px;
     width: 90%;
+    
+    .reviews-heading-container {
+        width: 90%;
+        height: 10%;
+        background-color: #5ea8f8;
+        border-radius: 10px !important;
+        margin-bottom: 20px;    
 
-    .reviews-heading {
-        font-size: 2em;
-        color: #439EFF;
-        text-decoration: underline;
-        margin-bottom: 5px;
+        .reviews-heading {
+            font-size: 2em;
+            color: white;
+            /* text-decoration: underline; */
+            text-align: center;
+            padding-top: 0.8em;
+        }   
     }
 }
 
 .review-title {
     text-align: center;
     padding-top: 10px;
-    font-weight: 800;
-    font-size: 18px;
-    color: #439EFF;
-    padding-left: 16px;
 }
 
 .review-date {
@@ -93,8 +108,8 @@
 
 .reviews-accordion {
     margin-bottom: 20px;
-    /* width: 100%; */
     max-width: 90%;
+    border-radius: 10px !important;
 }
 
 .review-expanded {
@@ -118,7 +133,6 @@
     color: #7B7B7B;
     margin-top: 6px;
     font-weight: 600;
-
 }
 
 .driver-link{
