- store riderUids in firebase - users can see who is in whose car - linked rider names to rider profiles

--- a/bryft/src/components/RidePost/RidePost.css
+++ b/bryft/src/components/RidePost/RidePost.css
@@ -84,3 +84,10 @@
 .text-container {
     margin-right: 20px;
 }
+
+.name-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
