Made user profile page reviers accordion to reduce amount of space taken on screen

--- a/bryft/src/components/RideModal/RideModal.css
+++ b/bryft/src/components/RideModal/RideModal.css
@@ -5,5 +5,6 @@
 }
 
 .create-ride-post-btn {
-    margin-right: 8em;
+    margin-right: 3em !important;
+    background-color: #5ea8f8 !important;
 }
