--- a/bryft/src/pages/RidesPage/RidesPage.css
+++ b/bryft/src/pages/RidesPage/RidesPage.css
@@ -4,11 +4,13 @@
     font-family: 'Amiko', sans-serif;
     color: #439EFF;
     font-weight: bold;
+    padding-top: 2em;
+    font-size: 2.0rem !important;
 }
 
 .filter-container {
     width: 300px !important;
-    border: 1px solid black;
+    border: 2px solid #2D92FF;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
