Adding photos of jans in homepage

--- a/bryft/src/pages/HomePage/HomePage.css
+++ b/bryft/src/pages/HomePage/HomePage.css
@@ -270,7 +270,7 @@ a {
 .additionalinfo {
     width: 40%;
     height: 73%;
-    /* background: url('./janss.png'); */
+    background: url('./janns.jpeg');
     border-radius: 25px;
     object-position: 0% 100px;
     position: relative;
