--- a/bryft/src/pages/RiderProfile/RiderProfile.css
+++ b/bryft/src/pages/RiderProfile/RiderProfile.css
@@ -10,53 +10,54 @@ body {
     flex: 1;
 }
 
-.rider-container {
-    max-width: 350px;
+.rider-info-container {
+    max-width: 460px;
     margin-left: 40px;
     margin-top: 2.5%;
+    background-color: #cde4fd;
+    border-radius: 20px;
+    margin-bottom: 10%;
+}
+
+.rider-info {
+    width: auto;
+    height: auto;
+    padding: 0 5% 5% 5%;
 }
 
 .rider-photo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
-    margin-top: 5%;
-    margin-left: 5%;
-    max-height: 400px;
+    margin: 5% auto;
+    max-height: 460px;
     max-width: 350px;
     height: auto;
     border-radius: 10px;
-}
-
-.rider-name {
-    position: relative;
-    padding-left: 5.5%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    font-size: 2em;
 }
 
 .name-rating {
     display: flex;
     align-items: center;
 
-    .user-name {
+    .rider-name {
         position: relative;
         padding-left: 5.5%;
+        margin-top: 5px;
+        margin-bottom: 5px;
         font-size: 2em;
-        margin: 5px 10px 5px 0px;
-        /* width: 100%; */
     }
 
     .review-star-icon {
         font-size: 2em;
-        color: gray;
+        color: #FFD700;
     }
 
     .avg-user-rating {
         font-size: 1.4em;
         text-align: center;
         color: rgb(79, 78, 78);
-
-        /* padding-top: 2px; */
     }
 }
 
@@ -66,17 +67,15 @@ body {
     margin-top: -2px;
     font-size: 1.3em;
     margin-bottom: -10px;
-    width: 100%;
 }
 
 .rider-bio {
     position: relative;
     padding-left: 5.5%;
-    width: 340px;
+    width: auto;
 }
 
 .rider-reviews-container {
-    margin-left: 4%;
     margin-top: 15px;
     width: 100%;
     
@@ -99,7 +98,8 @@ body {
 
 .review-title {
     text-align: center;
-    padding-top: 10px;
+    display: flex;
+    align-items: center;
 }
 
 .review-date {
