--- a/bryft/src/pages/RidesPage/RidesPage.css
+++ b/bryft/src/pages/RidesPage/RidesPage.css
@@ -1,30 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Amiko&family=Lora&display=swap');
+.rides-page-header {
+    display: flex;
+    /* display: block; */
+    height: 20vh;
+    max-height: 20vh;
+    width: 100%;
+    background-color: #439EFF;
+    margin-bottom: 20px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
 .title-text {
     font-family: 'Amiko', sans-serif;
-    color: #439EFF;
+    color: #FFFFFF;
     font-weight: bold;
-    padding-top: 2em;
-    font-size: 2.0rem !important;
+    font-size: 4.0rem !important;
+}
+
+.moving-car {
+    position: absolute;
+    top: 16%;
+    left: -100px;
+    transform: translateY(-20%);
+    animation: slide 8s linear infinite;
+}
+
+@keyframes slide {
+    0% {
+        left: -100px;
+    }
+
+    100% {
+        left: calc(100% + 100px);
+    }
+}
+
+.sort-by-select {
+    display: block;
+    width: 100%;
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    margin-right: 14%;
+    margin-bottom: 16px;
 }
 
 .filter-container {
-    width: 300px !important;
+    width: 30% !important;
+    max-width: 360px !important;
     border: 2px solid #2D92FF;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     padding-bottom: 14px;
+    max-height: 500px;
 }
 
 .filter-category {
     width: 100%;
-    font-family: 'amiko';
+    font-family: 'Amiko', sans-serif;
     display: inline-block;
     margin-top: 12px;
     font-size: 18px;
     font-weight: bold;
     color:#2D92FF;
+}
+
+.filter-heading-text {
+    color:#2D92FF;
+    font-family: 'Amiko', sans-serif;
+    font-weight: bold;
 }
 
 .filter {
@@ -33,20 +79,20 @@
 }
 
 .rides-container {
-    width: 100% !important;
+    max-width: 80% !important;
+    width: 100%;
 }
 
-/* .ride-button {
-    background-color: #439EFF;
-    color: #FFFFFF;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    padding: 12px 20px;
-    font-weight: bold;
+.end-of-results-text {
     font-family: 'Amiko', sans-serif;
-    cursor: pointer;
-  }
-  
-.ride-button:hover {
-    background-color: rgb(13, 99, 152);
-} */
+    color: #439EFF;
+    /* font-weight: bold; */
+    padding-top: 1em;
+    font-size: 2.0rem !important;
+    margin-bottom: 5% !important;
+}
+
+.box-container {
+    max-width: 90%;
+    width: 100%;
+}
