--- a/bryft/src/pages/RidesPage/RidesPage.css
+++ b/bryft/src/pages/RidesPage/RidesPage.css
@@ -1,98 +1,157 @@
-.rides-page-header {
-    display: flex;
-    /* display: block; */
-    height: 20vh;
-    max-height: 20vh;
-    width: 100%;
-    background-color: #439EFF;
-    margin-bottom: 20px;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
+    .rides-page-header {
+        display: flex;
+        height: 20vh;
+        max-height: 20vh;
+        width: 100%;
+        background-color: hsl(211, 100%, 63%);
+        margin-bottom: 20px;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
 
-.title-text {
-    font-family: 'Amiko', sans-serif;
-    color: #FFFFFF;
-    font-weight: bold;
-    font-size: 4.0rem !important;
-}
+    .title-text {
+        font-family: 'Amiko', sans-serif;
+        color: #FFFFFF;
+        font-weight: bold;
+    }
 
-.moving-car {
-    position: absolute;
-    top: 16%;
-    left: -100px;
-    transform: translateY(-20%);
-    animation: slide 8s linear infinite;
-}
+    .sort-by-select {
+        display: block;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 16px;
+    }
 
-@keyframes slide {
-    0% {
+    .end-of-results-text {
+        font-family: 'Amiko', sans-serif;
+        color: #439EFF;
+        /* font-weight: bold; */
+        padding-top: 1em;
+        font-size: 2.0rem !important;
+        margin-bottom: 5% !important;
+    }
+
+@media screen and (max-width: 1023px) {
+    .title-text {
+        font-size: 2rem !important;
+        text-align: center;
+    }
+
+    .moving-car {
+        position: absolute;
+        top: 20%;
         left: -100px;
+        transform: translateY(-20%);
+        animation: slide 5s linear infinite;
+        width: 100px;
+        height: 100px;
     }
 
-    100% {
-        left: calc(100% + 100px);
+    @keyframes slide {
+        0% {
+            left: -100px;
+        }
+    
+        100% {
+            left: calc(100%);
+        }
+    }
+
+    .filter-container {
+        display: none !important;
     }
 }
 
-.sort-by-select {
-    display: block;
-    width: 100%;
-    display: flex;
-    justify-content: right;
-    align-items: right;
-    margin-right: 14%;
-    margin-bottom: 16px;
-}
-
-.filter-container {
-    width: 30% !important;
-    max-width: 360px !important;
-    border: 2px solid #2D92FF;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 14px;
-    max-height: 500px;
-}
-
-.filter-category {
-    width: 100%;
-    font-family: 'Amiko', sans-serif;
-    display: inline-block;
-    margin-top: 12px;
-    font-size: 18px;
-    font-weight: bold;
-    color:#2D92FF;
-}
-
-.filter-heading-text {
-    color:#2D92FF;
-    font-family: 'Amiko', sans-serif;
-    font-weight: bold;
-}
-
-.filter {
-    width: 100%;
-    height: 25px;
-}
-
-.rides-container {
-    max-width: 80% !important;
-    width: 100%;
-}
-
-.end-of-results-text {
-    font-family: 'Amiko', sans-serif;
-    color: #439EFF;
-    /* font-weight: bold; */
-    padding-top: 1em;
-    font-size: 2.0rem !important;
-    margin-bottom: 5% !important;
-}
-
-.box-container {
-    max-width: 90%;
-    width: 100%;
+@media screen and (min-width: 1024px) {
+    .rides-page-header {
+        display: flex;
+        /* display: block; */
+        height: 20vh;
+        max-height: 20vh;
+        width: 100%;
+        background-color: #439EFF;
+        margin-bottom: 20px;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+    }
+    
+    .title-text {
+        font-family: 'Amiko', sans-serif;
+        color: #FFFFFF;
+        font-weight: bold;
+        font-size: 4.0rem !important;
+    }
+    
+    .moving-car {
+        position: absolute;
+        top: 16%;
+        left: -100px;
+        transform: translateY(-20%);
+        animation: slide 8s linear infinite;
+    }
+    
+    @keyframes slide {
+        0% {
+            left: -100px;
+        }
+    
+        100% {
+            left: calc(100% + 100px);
+        }
+    }
+    
+    .sort-by-select {
+        display: block;
+        width: 100%;
+        display: flex;
+        justify-content: right;
+        align-items: right;
+        margin-right: 14%;
+        margin-bottom: 16px;
+    }
+    
+    .filter-container {
+        width: 30% !important;
+        max-width: 360px !important;
+        border: 2px solid #2D92FF;
+        border-radius: 8px;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 14px;
+        max-height: 500px;
+    }
+    
+    .filter-category {
+        width: 100%;
+        font-family: 'Amiko', sans-serif;
+        display: inline-block;
+        margin-top: 12px;
+        font-size: 18px;
+        font-weight: bold;
+        color:#2D92FF;
+    }
+    
+    .filter-heading-text {
+        color:#2D92FF;
+        font-family: 'Amiko', sans-serif;
+        font-weight: bold;
+    }
+    
+    .filter {
+        width: 100%;
+        height: 25px;
+    }
+    
+    .rides-container {
+        max-width: 80% !important;
+        width: 100%;
+    }
+    
+    .box-container {
+        max-width: 90%;
+        width: 100%;
+    }
 }
